[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game/Common/MovementUtils/Rocket/rocket_explosion.gd" type="Script" id=1]
[ext_resource path="res://Misc/Audio/FX/Rocket/RocketExplosion.wav" type="AudioStream" id=2]

[sub_resource type="SphereShape" id=1]
radius = 0.75

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true

[sub_resource type="SphereMesh" id=8]
material = SubResource( 7 )
radius = 6.0
height = 12.0

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.92549, 0, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=3]
direction = Vector3( 0, 1, 0 )
spread = 180.0
gravity = Vector3( 0, -1.875, 0 )
initial_velocity = 3.0
initial_velocity_random = 0.5
angular_velocity = 720.0
angle = 720.0
color_ramp = SubResource( 6 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id=2]
material = SubResource( 4 )
radius = 0.063
height = 0.125
radial_segments = 32
rings = 16

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ExplosionParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionMesh:mesh:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExplosionMesh:mesh:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ExplosionMesh:mesh:material:albedo_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/path = NodePath("ExplosionParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionMesh:mesh:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.001, 1.0, 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExplosionMesh:mesh:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.001, 2.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ExplosionMesh:mesh:material:albedo_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0.678431, 0, 1 ), Color( 1, 0.984314, 0, 0 ) ]
}

[node name="RocketExplosion" type="Area"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="ExplosionMesh" type="MeshInstance" parent="."]
mesh = SubResource( 8 )

[node name="ExplosionParticles" type="Particles" parent="."]
emitting = false
amount = 128
one_shot = true
explosiveness = 1.0
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 2 )

[node name="ExplosionDecay" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="ExplosionAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/explode = SubResource( 10 )

[node name="ExplosionAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = 40.0
bus = "FX"
